[package]
name = "zk-nalloc"
version = "0.2.2"
edition = "2021"
rust-version = "1.70"
authors = ["nzengi <howyaniii@gmail.com>"]
description = "High-performance, deterministic memory allocator optimized for Zero-Knowledge Proof (ZKP) systems and cryptographic provers."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zk-nalloc/nalloc"
homepage = "https://github.com/zk-nalloc/nalloc"
documentation = "https://docs.rs/zk-nalloc"
keywords = ["cryptography", "zkp", "allocator", "performance", "memory"]
categories = ["memory-management", "cryptography"]
exclude = [
    ".github/",
    "benches/",
    "tests/",
]

[features]
default = ["fallback"]
fallback = []           # Fall back to system allocator when arena exhausted
huge-pages = []         # Linux 2MB/1GB huge page support
guard-pages = []        # Guard pages at arena boundaries for overflow protection
mlock = []              # Lock witness memory to prevent swapping

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

[dependencies]
rustix = { version = "0.38", features = ["mm"] }
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[target.'cfg(target_vendor = "apple")'.dependencies]
mach2 = "0.4"

[[bench]]
name = "alloc_benchmark"
harness = false